[package]
authors = ["msamgan <mohdsamgankhan@gmail.com>"]
description = "A simple tool for managing your local microservices servers (rebuild in RUST)"
edition = "2021"
name = "lmt"
version = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seahorse = "1.1"
